@@ -6,11 +6,13 @@ import gamein2022.backend.dashboard.core.sharedkernel.entity.Log;
 import gamein2022.backend.dashboard.core.sharedkernel.entity.Team;
 import gamein2022.backend.dashboard.core.sharedkernel.entity.Time;
 import gamein2022.backend.dashboard.core.sharedkernel.entity.User;
+import gamein2022.backend.dashboard.core.sharedkernel.enums.LogType;
 import gamein2022.backend.dashboard.infrastructure.repository.LogRepository;
 import gamein2022.backend.dashboard.infrastructure.repository.TeamRepository;
 import gamein2022.backend.dashboard.infrastructure.repository.TimeRepository;
 import gamein2022.backend.dashboard.infrastructure.repository.UserRepository;
 import gamein2022.backend.dashboard.web.dto.result.GetTeamLogsResultDTO;
+import gamein2022.backend.dashboard.web.dto.result.LogDTO;
 import gamein2022.backend.dashboard.web.dto.result.RegionResultDTO;
 import gamein2022.backend.dashboard.web.dto.result.TeamInfoResultDTO;
 import gamein2022.backend.dashboard.web.iao.AuthInfo;
@@ -19,6 +21,7 @@ import org.springframework.stereotype.Service;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -100,7 +103,11 @@ public class TeamServiceHandler {
     }
 
     public GetTeamLogsResultDTO getTeamLogs(AuthInfo authInfo) {
-        return new GetTeamLogsResultDTO( logRepository.findAllByTeamId(authInfo.getTeamId())
-                .stream().map(Log::toDto).collect(Collectors.toList()));
+        List<LogDTO> firstList = logRepository.findAllByTypeAndTeamId(LogType.ASSEMBLY,authInfo.getTeamId())
+                .stream().map(Log::toDto).toList();;
+        List<LogDTO> secList = new ArrayList<>(logRepository.findAllByTypeAndTeamId(LogType.PRODUCTION, authInfo.getTeamId())
+                .stream().map(Log::toDto).toList());
+        secList.addAll(firstList);
+        return new GetTeamLogsResultDTO(secList);
     }
 }
